--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: #05101c;
+  /* background: #05101c; */
+  background: rgba(2, 10, 43, 0.989);
   color: white;
   font-family: "Roboto Slab", serif;
 }
